4B/cs444/tests/site/pass/pass_stringliterals.joos
/* pass: string literals */
public class A {
  public A() {}
  protected String x = "foo";
}

