4B/cs444/tests/site/fail/fail_unicodeinput.joos
/* fail: Unicode input */
public class A {
  final String x = "ᚪᚾᛁᛣᚩᛞᛖ";
}

